--- a/docs/web5/_quickstart-09-next-steps.mdx
+++ b/docs/web5/_quickstart-09-next-steps.mdx
@@ -1,23 +1,22 @@
 # Summary
 
-Click [here](/files/index.txt) to download what your final index.js file should look like after all steps above
-
 Congrats! You've just created a local DWN to serve as your user's
-personal data store. Given a user's DID and appropriate permissions,
-your app can read, write, or delete data from the user's DWN, while
-leaving them full control of their content. Other apps can query local
-storage to determine if the user already has a DWN on their device, and
-can also read and write from this same data store - essentially, making
-the user's data portable across multiple applications.
+personal data store. 
 
-## Next Steps:
-### 1. Learn more about [DIDs](/docs/web5/learn/decentralized-identifiers)
-### 2. Learn more about [DWNs](/docs/web5/learn/decentralized-web-nodes)
-### 3. Build a decentralized [ToDo app](/docs/web5/build/apps/todo-app-tutorial)
+Given a user's DID and appropriate permissions, your app can read, write, or delete data from the user's DWN, while
+leaving them in full control of their content. Other apps can query local storage to determine if the user already has a DWN on their device, and
+can also read and write from this same data store - essentially, making the user's data portable across multiple applications.
 
 :::info
-The source code for the interactive parts of this Quickstart is available 
-[here](https://github.com/TBD54566975/web5-quickstart-widgets/blob/main/index.html) as a
-single HTML file. You may run the examples here, open the file directly in your 
-browser, or see it deployed [here](https://moonlit-centaur-0d7b4f.netlify.app/).
+* [Download the completed index.js file](/files/index.txt)
+* [View source code for the interactive sandbox of this Quickstart](https://github.com/TBD54566975/web5-quickstart-widgets/blob/main/index.html) 
+* [Run interactive sandbox directly in your browser](https://moonlit-centaur-0d7b4f.netlify.app/)
 :::
+
+
+# Next Steps
+
+* Learn more about [DIDs](/docs/web5/learn/decentralized-identifiers)
+* Learn more about [DWNs](/docs/web5/learn/decentralized-web-nodes)
+* Build a decentralized [ToDo app](/docs/web5/build/apps/todo-app-tutorial)
+
