--- a/docs/web5/_quickstart-03-create-did.mdx
+++ b/docs/web5/_quickstart-03-create-did.mdx
@@ -1,42 +1,57 @@
 # Start Building
 
-## Create Web5 App instance:
+## 1. Create Web5 App Instance
 
-There’s only one class needed for all operations, it creates an isolated API object for doing all things Web5.
+The `Web5` class is an isolated API object for doing all things Web5.
 
-Open your <code>index.js</code> file and add this below your Web5 import:
+In `index.js` below the import statement, create a new instance of `Web5`:
 
-<pre>const web5 = new Web5()</pre>
-
-## *Objects within Web5:*
-Web5 is split into three main top-level objects:
-- web5.dwn
-- web5.did
-- web5.vc
-
-We're going to focus on `web5.did` and `web5.dwn` namespace in this quickstart.
-
-## 1. Create DID, `web5.did`:
+```js
+const web5 = new Web5();
+```
 
 :::info
-A [Decentralized Identifier (DID)](https://www.w3.org/TR/did-core/),
-is an W3C specification for an address representing who you are on the decentralized web. You 
-can [learn more about them here](/docs/web5/learn/decentralized-identifiers) as 
-a core concept behind Web5.
+Web5 is split into three main top-level objects:
+- web5.did
+- web5.dwn
+- web5.vc
+
+We're going to focus on `web5.did` and `web5.dwn` in this Quickstart.
 :::
 
-In the world of Web5 a user’s unique identifier, like an email address, is called a DID. This is a decentralized app so we need an identifier that isn’t tied to a centralized authority. It can be used to identify and associate a user’s data across any platform.
+## 2. Create DID
 
-Let’s create a DID using the Web5 API with the <code>ion</code> method name. Right below your new Web5 instance add:
-<pre>let did = await web5.did.create('ion');</pre>
+:::info
+In Web5 apps, a user’s unique identifier - like an email address - is called a [Decentralized Identifier (DID)](/docs/web5/learn/decentralized-identifiers). 
+We are building a decentralized app, so your users are using identifiers that aren't tied to a centralized authority. Their DIDs are used to identify and associate the user’s data across any decentralized platform.
+:::
 
-*We’re using ION here as the method name, learn more about other method names [here](https://www.w3.org/TR/did-core/#methods).*
+Assuming a brand new user who does not yet have a DID, let’s create their DID using the Web5 API. Below the Web5 instantiation, add:
+```js
+let did = await web5.did.create('ion');
+```
 
-## Test this out:
+:::info
+We’re using `ion` as the DID method. Learn more about ION and other [DID methods](http://localhost:3000/docs/web5/learn/decentralized-identifiers#methods).
+:::
 
-### Option 1. In `index.js`:
-Add `console.log(did.id)` and in terminal run `node src/index.js`
+<details>
+  <summary>Test your code</summary>
+  <p>
+  Wanna see the created DID?
 
-Output should look like: `did:ion:EiBSuKWKAC0zpoM3KlhoyZxCHaMN5TBbcr...`
+  In <code>index.js</code>, add the following line and save your file:
+  ```js
+  console.log(did.id);
+  ```
 
-### Option 2. Click `Run!` below to create a DID in the browser:
+  Then from the terminal, run:
+  ```bash
+  node src/index.js
+  ```
+
+  You'll see the newly created DID.
+  </p>
+</details>
+
+Click "Run!" below to create your user's DID right here in your sandbox:
