--- a/docs/web5/_quickstart-04-register-did.mdx
+++ b/docs/web5/_quickstart-04-register-did.mdx
@@ -1,28 +1,23 @@
-## 2. Store DID Keys, `web5.did.manager`:
+## 3. Associate DID with Storage
 
-When you instantiate Web5, the SDK internally creates a Decentralized Web Node (explained in next step) to act as a personal data store to hold your DID keys.
+When you instantiate Web5, the SDK internally creates a [Decentralized Web Node(DWN)](/docs/web5/learn/decentralized-web-nodes) to act as a personal data store to hold your user's content.
 
-Store your DID as well as save and encrypt your keys with `web5.did.manager`. Add this to `index.js`:
+To store the user's DID as well as save and encrypt their keys, add the following to `index.js`:
 
 ```js
 await web5.did.manager.set(did.id, {
     connected: true,
-    endpoint: 'app://dwn',
+    endpoint: 'app://dwn', //this points to the user's local DWN
     keys: {
         ['#dwn']: {
           keyPair: did.keys.find(key => key.id === 'dwn').keyPair,
         },
     },
 });
-
-const data = 'Hello Web5';
 ```
 
-## Test this out:
+:::note
+In production apps, before doing this step, you'd check to make sure the user doesn't already have an existing DWN. 
+:::
 
-### Option 1. In `index.js`:
-Add `console.log('write data', data);`
-
-Output should say: `write data Hello Web5`
-
-### Option 2. Click `Run!` to set your keys from last step:
+Click "Run!" to store the user's DID (created in the previous step) in the sandbox DWN:
