--- a/docs/web5/_quickstart-07-update-record.mdx
+++ b/docs/web5/_quickstart-07-update-record.mdx
@@ -13,7 +13,7 @@ const updateResult = await myRecord.record.update({data: "Hello, I'm updated!"})
 To see the record that was updated in the DWN, add the following to <code>index.js</code>:
 
 ```js
-console.log('Update result: ', updateResult.record.data.text());
+console.log('Update result: ', await myRecord.record.data.text());
 ```
 
 The output will resemble:
