Update delete log instruction

--- a/docs/web5/_quickstart-08-delete-record.mdx
+++ b/docs/web5/_quickstart-08-delete-record.mdx
@@ -19,7 +19,7 @@ console.log('Delete result: ', deleteResult.status);
 The output will resemble:
 
 ```js
-Delete result: status: { code: 202, detail: 'Accepted' },
+Delete result status: { code: 202, detail: 'Accepted' },
 ```
 
 </p>
