--- a/docs/web5/_quickstart-07-update-record.mdx
+++ b/docs/web5/_quickstart-07-update-record.mdx
@@ -1,6 +1,6 @@
-## 7. Update DWN Records
+## 6. Update DWN Records
 
-Tp update the record, call `update` on the record object itself.
+To update the record, call `update` on the `record` object itself.
 
 Add the following to `index.js`:
 ```js
