--- a/docs/web5/_quickstart-08-delete-record.mdx
+++ b/docs/web5/_quickstart-08-delete-record.mdx
@@ -1,6 +1,6 @@
 ## 7. Delete DWN Records
 
-Given permission from the user, your app can delete records from their DWN. Similar to reading, we’ll use the `recordId` to remove a record.
+Given permission from the user, your app can delete records from their DWN. Similar to reading, we’ll use the `record` object to remove the record.
 
 Add the following to `index.js`:
 ```js
