--- a/docs/web5/_quickstart-03-create-did.mdx
+++ b/docs/web5/_quickstart-03-create-did.mdx
@@ -1,33 +1,53 @@
-## 2. Create Web5 instance:
+# Start Building
 
-There’s only one class for all Web5 operations
+## 1. Create Web5 App Instance
+
+The `Web5` class is an isolated API object for doing all things Web5.
+
+In `index.js` below the import statement, create a new instance of `Web5`:
 
 ```js
-const web5 = new Web5
+const web5 = new Web5();
 ```
-
-## 3. Create a Decentralized Identifier (DID):
 
 :::info
-A [Decentralized Identifier (DID)](https://www.w3.org/TR/did-core/),
-is an W3C specification for an address representing who you are on the decentralized web. You 
-can [learn more about them here](/docs/web5/learn/decentralized-identifiers) as 
-a core concept behind Web5.
+Web5 is split into three main top-level objects:
+- web5.did
+- web5.dwn
+- web5.vc
+
+We're going to focus on `web5.did` and `web5.dwn` in this Quickstart.
 :::
 
-In the world of Web5, a user's unique identifier, like an email address, is called a DID.
+## 2. Create DID
 
-Why do we need a DID?
+In Web5 apps, a user’s unique identifier - like an email address - is called a [Decentralized Identifier (DID)](/docs/web5/learn/decentralized-identifiers). 
+We are building a decentralized app, so your users are using identifiers that aren't tied to a centralized authority.
 
-Since we're now building decentralized apps we need an identifier that isn't tied to a centralized authority.
-It can be used to identify and associate a user's data across any platform.
-
-We can create a DID using the Web5 API:
-
+Assuming a brand new user who does not yet have a DID, let’s create their DID using the Web5 API. Below the Web5 instantiation, add:
 ```js
-let did = await web5.did.create('ion');
+const did = await web5.did.create('ion');
 ```
 
-This creates a new DID using the `ion` [method name](/docs/glossary#did-method---ion).
+We’re using `ion` as the DID method. Learn more about ION and other [DID methods](/docs/web5/learn/decentralized-identifiers#methods).
 
-Play with creating DIDs here:
+<details>
+  <summary>Test your code</summary>
+  <p>
+  Wanna see the created DID?
+
+  In <code>index.js</code>, add the following line and save your file:
+  ```js
+  console.log(did.id);
+  ```
+
+  Then from the terminal, run:
+  ```bash
+  node src/index.js
+  ```
+
+  You'll see the newly created DID.
+  </p>
+</details>
+
+Click "Run!" below to create your user's DID right here in your sandbox:
