* Fixing broken update DWN record on Quickstart * Updating "Build" folder guides to new Web5 APIs

--- a/docs/web5/_quickstart-06-read-record.mdx
+++ b/docs/web5/_quickstart-06-read-record.mdx
@@ -5,7 +5,7 @@ If the user has given your app read permissions to their DWN, you can read their
 
 To return the text data stored in the `record` add the following to `index.js`:
 ```js
-const readResult = await myRecord.record.data.text();
+const readResult = await record.data.text();
 ```
 
 <details>
