--- a/docs/web5/_quickstart-08-delete-record.mdx
+++ b/docs/web5/_quickstart-08-delete-record.mdx
@@ -4,7 +4,7 @@ Given permission from the user, your app can delete records from their DWN. Simi
 
 Add the following to `index.js`:
 ```js
-const deleteResult = await myRecord.record.delete();
+const deleteResult = await record.delete();
 ```
 
 <details>
