--- a/docs/web5/_quickstart-06-read-record.mdx
+++ b/docs/web5/_quickstart-06-read-record.mdx
@@ -3,7 +3,7 @@
 If the user has given your app read permissions to their DWN, you can read their data by accessing it through the record property.
 
 
-To return the text data stored in the `record` add the following to `index.js`:
+To return the text data stored in the `record`, add the following to `index.js`:
 ```js
 const readResult = await record.data.text();
 ```
