--- a/docs/web5/_quickstart-06-read-record.mdx
+++ b/docs/web5/_quickstart-06-read-record.mdx
@@ -1,6 +1,6 @@
 ## 5. Read DWN Records
 
-If the user has given your app read permissions to their DWN, you can read their data by accessing it through the record property.
+If the user has given your app read permissions to their DWN, you can read their data by accessing it through the `record` property.
 
 
 To return the text data stored in the `record`, add the following to `index.js`:
