--- a/docs/web5/_quickstart-07-update-record.mdx
+++ b/docs/web5/_quickstart-07-update-record.mdx
@@ -18,11 +18,11 @@ console.log('Update result: ', await record.data.text());
 
 The output will resemble:
 
-```js
+```
 Update result: Hello, I'm updated!
 ```
 
 </p>
 </details>
 
-Click "Run!" to see the updated record in the sandbox DWN:
+Enter "Hello, I'm updated" in the input field and click "Run!" to update the record in the sandbox DWN:
