Issue #433 - Web5 Quickstart points to versioned Quickstart widget

--- a/docs/web5/_quickstart-10-next-steps.mdx
+++ b/docs/web5/_quickstart-10-next-steps.mdx
@@ -9,7 +9,7 @@ can also read and write from this same data store - essentially, making the user
 
 :::info
 * [Download the completed index.js file](/files/index.txt)
-* [View source code for the interactive sandbox of this Quickstart](https://github.com/TBD54566975/web5-quickstart-widgets/blob/main/index.html) 
+* [View source code for the interactive sandbox of this Quickstart](https://raw.githubusercontent.com/TBD54566975/web5-quickstart-widgets/0.6.0/index.html) 
 * [Run interactive sandbox directly in your browser](https://moonlit-centaur-0d7b4f.netlify.app/)
 :::
 
