set up api docs to be outside of /docs url for now

--- a/docs/api.mdx
+++ b/docs/api.mdx
@@ -1,8 +1,7 @@
----
-title: 'API Reference'
----
+# API Reference
 
 import ApiCard from '@site/src/components/ApiCard';
+
 
 <div>
   <p>The Web5 API References provide access to the Web5 JS SDK, DWN JS SDK, the SSI SDK, and SSI Service API.</p>
