--- a/src/pages/open-source/incubation.mdx
+++ b/src/pages/open-source/incubation.mdx
@@ -3,8 +3,9 @@ hide_table_of_contents: true
 ---
 
 import metacontent from '@site/src/content/global-meta';
-import { content } from '@site/src/content/open-source/open-source';
-import Heading from '@site/src/content/open-source/heading.mdx';
+import { content } from '@site/src/content/open-source/incubation/incubation-program.js';
+import Heading from '@site/src/content/open-source/incubation/heading.mdx';
+import Content from '@site/src/content/open-source/incubation/content.mdx';
 
 <head>
   <title>{content.meta.title}</title>
@@ -25,10 +26,8 @@ import Heading from '@site/src/content/open-source/heading.mdx';
 
 <Heading />
 
-<ButtonGroup buttons={content.buttons} />
+<Content />
 
 <Divider type="slash" />
-
-<PillarList title={content.title} pillars={content.pillars} />
 
 </div>
