--- a/api/web5-js/did/manager.mdx
+++ b/api/web5-js/did/manager.mdx
@@ -14,7 +14,7 @@ Clears `web5`'s internal store of all `did` data.
 None
 
 #### Code Example
-```
+```js
 await web5.did.manager.clear();
 ```
 
@@ -27,7 +27,7 @@ Checks if the `did` store exists or contains any data
 None
 
 #### Code Example
-```
+```js
 const exists = await web5.did.manager.exists();
 if (exists) {
     // do something
@@ -47,7 +47,7 @@ Gets the `did` assigned to a given `recordId`.
 The `did` stored with the input `recordId`
 
 #### Code Example
-```
+```js
 const id = "someRecord";
 let data = web5.did.manager.get(id);
 ```
@@ -63,14 +63,14 @@ Deletes the `did` assigned to a given `recordId`.
 #### Returns
 
 #### Code Example
-```
+```js
 const id = "someRecord";
 web5.did.manager.delete(id);
 ```
 
 ### set(id, value)
 
-Sets the value into the data store with a given `id`
+The package provides a `did` manager mechanism that handles interactions with a `did` that is being 'managed' by the local code (be it in a web page, agent app, or elsewhere). By adding a `did` to the manager, the library ensures that all interactions with that `did`, including things like signing and encryption, are handled automatically.
 
 #### Parameters
 
@@ -81,7 +81,7 @@ Sets the value into the data store with a given `id`
 
 #### Code Example
 
-```
+```js
 const id = "someRecord";
 const data = {
     key: "value"
