--- a/api/web5-js/dwn/protocols.mdx
+++ b/api/web5-js/dwn/protocols.mdx
@@ -9,24 +9,68 @@ The `protocols` class is responsible for providing convenience methods for manag
 
 #### Parameters
 
-- `target` - 
-- `request` -
+`target` - The target `did` to examine.
+
+`request`
+- `author`: The decentralized identifier of the `did`` signing the query. This may be the same as the target parameter if the target and the signer of the query are the same entity, which is common for an app querying the DWeb Node of its own user.
+- `message`: The properties of the DWeb Node Message Descriptor that will be used to construct a valid `dwn` message.
+    - `definition`: an object that defines the ruleset that will be applied to the records and activities under the protocol.
+    - `protocol`: a URI that represents the protocol being queried for.
 
 #### Return Value
 
+The response from the query.
+
 #### Code Example
+```js
+
+const response = await web5.dwn.protocols.configure('did:example:alice', {
+  author: 'did:example:alice',
+  message: {
+    protocol: "https://decentralized-music.org/protocol",
+    definition: {
+      "labels": {
+        "playlist": {
+          "schema": "https://decentralized-music.org/protocol/playlist",
+          "dataFormat": [ "application/json" ]
+        },
+        "track": {
+          "schema": "https://decentralized-music.org/protocol/track",
+          "dataFormat": [ "application/json" ]
+        },
+        "audio": {
+          "schema": "https://decentralized-music.org/protocol/audio",
+          "dataFormat": [ "audio/aac", "audio/mp4" ]
+        }
+      },
+      "records": {
+        "playlist": {},
+        "track": {
+          "records": {
+            "audio": {}
+          }
+        }
+      }
+    }
+  }
+});
+
+```
 
 ### query(target, request)
 
+Method for querying the protocols that a `target` `did` has added configurations for in their `dwn`
+
 #### Parameters
 
-- `target` - 
-- `request` - The query request must contain the following:
+`target` - The target `did` to examine.
 
-    - `author`: The decentralized identifier of the `did`` signing the query. This may be the same as the target parameter if the target and the signer of the query are the same entity, which is common for an app querying the DWeb Node of its own user.
-    - `message`: The properties of the DWeb Node Message Descriptor that will be used to construct a valid DWeb Node message.
-    - `filter`: an object that defines a set of properties to filter results.
-    - `protocol`: a URI that represents the protocol being queried for.
+`request` - The query request must contain the following:
+
+- `author`: The decentralized identifier of the `did`` signing the query. This may be the same as the target parameter if the target and the signer of the query are the same entity, which is common for an app querying the DWeb Node of its own user.
+- `message`: The properties of the DWeb Node Message Descriptor that will be used to construct a valid DWeb Node message.
+- `filter`: an object that defines a set of properties to filter results.
+- `protocol`: a URI that represents the protocol being queried for.
 
 #### Return Value
 
@@ -34,7 +78,7 @@ The response of the request as an object.
 
 #### Code Example
 
-```
+```js
 const web5 = new Web5();
 const response = await web5.dwn.protocols.query('did:example:alice', {
   author: 'did:example:alice',
