--- a/src/pages/open-source/contributing.mdx
+++ b/src/pages/open-source/contributing.mdx
@@ -1,4 +1,4 @@
-import CommunitySection from '../components/Community'
+import CommunitySection from '../../components/Community'
 
 # Welcome to Our Contributor Community!
 We're thrilled that you're interested in becoming a part of our thriving community. We believe in fostering an environment where everyone feels welcome and is able to contribute. To ensure the well-being of our community, we adhere to a [Code of Conduct](https://github.com/TBD54566975/developer.tbd.website/blob/main/CODE_OF_CONDUCT.md). Please take a moment to read it thoroughly before you make any contributions.
