--- a/src/pages/open-source/contributing.mdx
+++ b/src/pages/open-source/contributing.mdx
@@ -46,6 +46,14 @@ We've highlighted some repositories with new open issues to help you get started
 * [DWN-Server](https://github.com/TBD54566975/dwn-server/issues?q=is%3Aissue+is%3Aopen+no%3Aassignee)
 * [DWN-SDK-JS](https://github.com/TBD54566975/dwn-sdk-js/issues?q=is%3Aissue+is%3Aopen+no%3Aassignee)
 
+## Upcoming Community Events 
+
+[![](https://hackmd.io/_uploads/HyRH4X-Sn.png)](https://discord.com/events/937858703112155166/1101242445536182302)
+
+### Community Led Events:
+
+[![](https://hackmd.io/_uploads/ByF_NXWHn.png)](https://discord.com/events/937858703112155166/1108018586729070673)
+
 
 ## License
 
