Issue #458 - Move Code of Conduct under Open Source

--- a/src/content/open-source/incubation/content.mdx
+++ b/src/content/open-source/incubation/content.mdx
@@ -7,7 +7,7 @@ import { content } from '@site/src/content/open-source/incubation/incubation-pro
 
   TBD Incubation projects are managed by community contributors. They advance the
   decentralized web and accelerate development and adoption of the Web5 platform.
-  Like all projects in the TBD ecosystem, they follow our <a href="/code-of-conduct">Code of Conduct</a>
+  Like all projects in the TBD ecosystem, they follow our <a href="/open-source/code-of-conduct">Code of Conduct</a>
   and <a href="/open-source/governance">Governance</a>
   model, fostering an inclusive community. Incubation projects benefit from
   TBD’s open source programs including GitHub and our Discord server.
