--- a/src/pages/open-source/contributing.mdx
+++ b/src/pages/open-source/contributing.mdx
@@ -1,7 +1,7 @@
 import CommunitySection from '../../components/Community'
 
 # Welcome to Our Contributor Community!
-We're thrilled that you're interested in becoming a part of our thriving community. We believe in fostering an environment where everyone feels welcome and is able to contribute. To ensure the well-being of our community, we adhere to a [Code of Conduct](https://developer.tbd.website/open-source/code-of-conduct). Please take a moment to read it thoroughly before making any contributions.
+We're thrilled that you're interested in becoming a part of our thriving community. We believe in fostering an environment where everyone feels welcome and is able to contribute. To ensure the well-being of our community, we adhere to a [Code of Conduct](/code-of-conduct). Please take a moment to read it thoroughly before making any contributions.
 
 Before you begin working on an issue, please familiarize yourself with the project's contribution guidelines in their CONTRIBUTING.md. This will provide you with an understanding of the project's process.
 
